# argocd-dependency-cmp

./: Containerfile  Containerfile.standard  Containerfile.test  README.md  plugin.yaml  pyproject.toml
.github/workflows/: cd.yaml  ci-manual.yaml  ci-multiarch-test.yaml  ci.yaml  release.yaml
src/dependency_cmp/: discovery.py  graph.py  main.py  models.py  settings.py
tests/: test_discovery.py  test_graph.py  test_integration.py  test_models.py  test_settings.py
tests/test-data/non-recurse-kustomize/: deployment1.yaml  kustomization.yaml
tests/test-data/non-recurse-raw-files/: expected.output  params.env
tests/test-data/non-recurse-raw-files-2/: deployment3.yml  deployment4.yml  expected.output
tests/test-data/non-recurse-raw-files-2/subfolder/: deployment5.yml
tests/test-data/recurse-kustomize-1/: deployment2.yml  expected.output
tests/test-data/recurse-kustomize-2/: expected.output
tests/test-data/recurse-kustomize-3-include/: expected.output  params.env
tests/test-data/recurse-kustomize-3-include/subfolder2/: kustomization.yaml
tests/test-data/recurse-kustomize-4-include-exclude/: expected.output  params.env
tests/test-data/recurse-kustomize-4-include-exclude/subfolder2/: deployment4.yaml
tests/test-data/recurse-raw-files/: expected.output  params.env
tests/test-data/recurse-raw-files-exclude/: params.env
tests/test-data/recurse-raw-files-include/: expected.output  params.env
tests/test-data/recurse-raw-files-include/subfolder/: deployment3.yml
